hphp/test/slow/array/compare_recursive_array.php.expectf
array(1) {
  [0]=>
  &array(1) {
    [0]=>
    *RECURSION*
  }
}
array(1) {
  [0]=>
  &array(1) {
    [0]=>
    *RECURSION*
  }
}

Fatal error: infinite recursion detected in %s/array/compare_recursive_array.php on line 11
